# invalid-elf-header-mwe

component-add/: Cargo.toml  add_wasm32-wasip1.wasm
component-add/src/: bindings.rs  lib.rs
component-add/wit/: world.wit
src-failing/: Cargo.toml
src-failing/src/: main.rs
src-precompile/: Cargo.toml  add_wasm32-wasip1.cwasm
src-precompile/src/: main.rs
