[package]
name = "add"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
talc = { version = "4.4.3", default-features = false,  features = ["lock_api"]}


[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:add"

[package.metadata.component.dependencies]
