[package]
name = "component-model-test"
version = "0.1.0"
edition = "2024"

[dependencies]
# ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = ["alloc", "time"] }
# ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }
wasmtime = { version = "34.0.2", default-features = false, features = ["runtime", "component-model", "pulley"] }
defmt = "*"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
